# jr_bot_ros

./: .fuse_hidden00002dcc00000002  .gitignore  .gitmodules  README.md
.devcontainer/: README.md
.devcontainer/host/: Dockerfile  devcontainer.json
.devcontainer/sbc/: Dockerfile  devcontainer.json
config/scripts/: README.md  build_img.sh  convenience_functions.sh  devel.sh  enter_bash.sh  post_create.sh  stop.sh
config/udev/: 99-int-brain.rules  README.md
custom_effort_controllers/: CMakeLists.txt  package.xml  system_identifier.xml
custom_effort_controllers/config/: pltjg.xml
custom_effort_controllers/include/custom_effort_controllers/: system_identifier.hpp
custom_effort_controllers/src/: system_identifier.cpp
int_brain_description/: CMakeLists.txt  package.xml
int_brain_description/config/: view.rviz
int_brain_description/launch/: view_robot.launch.py
int_brain_description/meshes/: coupler.stl  mecanum_wheel.stl  motor_chassis.stl
int_brain_description/urdf/: int_brain.xacro  lidar.xacro  materials.xacro  ros2_control_gz.xacro  ros2_control_hardware.xacro
int_brain_gazebo/: CMakeLists.txt  package.xml
int_brain_gazebo/config/: controllers.yaml  gazebo.rviz
int_brain_gazebo/launch/: gazebo.launch.py  model_gazebo_spawn.launch.py
int_brain_gazebo/worlds/: empty.sdf
int_brain_hardware/: CMakeLists.txt  int_brain_hardware.xml  package.xml
int_brain_hardware/include/int_brain_hardware/: actuator_system.hpp  arduino_comms.hpp  battery.hpp  imu.hpp  mcu_comms.hpp  motor.hpp
int_brain_hardware/src/: actuator_system.cpp  mcu_comms.cpp  motor.cpp
int_brain_navigation/: package.xml
int_brain_navigation/launch/: slam.launch.py
int_brain_system/: CMakeLists.txt  package.xml
int_brain_system/config/: controllers.yaml  ekf.yaml  pltjg_ctrl_dbg.xml  teleop_params.yaml  view.rviz
int_brain_system/launch/: system.launch.py  teleop_joy.launch.py  teleop_keyboard.launch.py
int_brain_system/src/: imu_calibrate.cpp  imu_covariance.cpp
jr_bot_description/: CMakeLists.txt  package.xml
jr_bot_description/config/: view.rviz
jr_bot_description/launch/: view_robot.launch.py
jr_bot_description/meshes/: motor_shaft.stl
jr_bot_description/urdf/: jr_bot.ros2_control.xacro  jr_bot.xacro
jr_bot_hardware/: CMakeLists.txt  jr_bot_broadcasters.xml  jr_bot_hardware.xml  package.xml
jr_bot_hardware/include/jr_bot_hardware/: actuator_system.hpp  imu.hpp  jr_bot_messages.hpp  mcu_comms.hpp  tof_laser_scan_broadcaster.hpp
jr_bot_hardware/src/: actuator_system.cpp  mcu_comms.cpp  motor.cpp  tof_laser_scan_broadcaster.cpp
jr_bot_navigation/: CMakeLists.txt  package.xml
jr_bot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
jr_bot_navigation/launch/: slam.launch.py
jr_bot_system/: CMakeLists.txt  package.xml
jr_bot_system/config/: controllers.yaml  ekf.yaml  teleop_params.yaml
jr_bot_system/launch/: system.launch.py  teleop_joy.launch.py  teleop_keyboard.launch.py
jr_bot_system/src/: imu_feedback.cpp  tof_scan_publisher.cpp
maps/L646/: L646.pgm  L646.yaml
maps/e_hostel_floor/: map.pgm  map.yaml
maps/ruas_audi/: corridor.pgm  corridor.yaml  one.pgm  one.yaml  with_students.yaml.pgm  with_students.yaml.yaml
motor_modelling/: package.xml  setup.cfg  setup.py
motor_modelling/motor_modelling/: system_id_node.py
scripts/: convenience_functions.sh  devel.sh  enter_bash.sh  stop.sh
src/int_brain_description/meshes/: base_link.stl
src/int_brain_description/urdf/: gz.xacro  macros.xacro
src/int_brain_hardware/: CMakeLists.txt
src/int_brain_system/launch/: system.launch.py
