<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>int_brain_navigation</name>
  <version>1.0.0</version>
  <description>URDF description package for 4 mecanum wheel drive bot</description>
  <maintainer email="khandelwalkostubh@gmail.com">Kostubh Khandelwal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- Build dependencies -->
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>

  <!-- Execution dependencies -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>