<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jr_bot_system</name>
  <version>1.0.0</version>
  <description>System launch and configuration for jr_bot</description>
  <maintainer email="khandelwalkostubh@gmail.com">Kostubh Khandelwal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  
  <depend>jr_bot_description</depend>
  <depend>jr_bot_hardware</depend>
  <depend>rviz2</depend>
  <depend>robot_localization</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  <depend>diff_drive_controller</depend>
  <depend>twist_stamper</depend>
  <depend>ros2_control</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>